Tasks group - dodano widoki dla listy grup zadaniowych, listy uczestnikow, listy   zadan - stworzono widoki dla delegatow list: uczestnikow grup i zadan w grupie - dodano style dla tekstow o rozmiarze 12sp i 18sp - zdefiniowano nowe parametry: margin24, padding, radius, rozmiary   tekstow dla medium i small - dodano nowe ikony

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.IOapp">
-        <activity android:name=".TaskGroupActivity"></activity>
+        <activity android:name=".TaskGroupGoalsActivity"></activity>
+        <activity android:name=".TaskGroupUserListActivity" />
+        <activity android:name=".TaskGroupManagerActivity" />
         <activity android:name=".task_add_activity" />
         <activity android:name=".user_profile_activity" />
         <activity android:name=".Calendar">
