--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,22 +5,22 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="@string/projectName"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.IOapp">
-        <activity android:name=".TaskGroupGoalsActivity"></activity>
-        <activity android:name=".TaskGroupUserListActivity" />
-        <activity android:name=".TaskGroupManagerActivity" />
-        <activity android:name=".ChatManagerActivity"/>
-        <activity android:name=".MessageActivity" />
-        <activity android:name=".main_view">
+        <activity android:name=".GroupTasks"></activity>
+        <activity android:name=".GroupUserList" />
+        <activity android:name=".GroupList" />
+        <activity android:name=".ChatList"/>
+        <activity android:name=".Chat" />
+        <activity android:name=".HomeWindow">
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".task_add_activity" />
-        <activity android:name=".user_profile_activity" />
+        <activity android:name=".AddTask" />
+        <activity android:name=".UserProfile" />
         <activity android:name=".Calendar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -29,7 +29,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".Register" />
-        <activity android:name=".Login" />
+        <activity android:name=".loginHeader" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
