--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,38 +9,35 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.IOapp">
-
-        <activity android:name=".SeekWindow"
+        <activity android:name=".AddGroupUserList">android:exported="true">
+            <intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter></activity>
+        <activity
+            android:name=".AddGroup"
             android:exported="true">
-
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
-        <activity android:name=".GroupTasks" />
-
-
-        <activity android:name=".GroupUserList" />
-
-
-        <activity android:name=".GroupList" android:exported="true">
-
-        <intent-filter>
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
+        <activity
+            android:name=".SeekWindow"
+            android:exported="true">
+            <intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
-
-
-
-
+        <activity android:name=".GroupTasks" />
+        <activity android:name=".GroupUserList" />
+        <activity
+            android:name=".GroupList"
+            android:exported="true">
+            <intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".ChatList" />
-
-
         <activity android:name=".Chat" />
-
-
         <activity
             android:name=".HomeWindow"
             android:exported="true">
@@ -48,14 +45,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
         <activity android:name=".AddTask" />
-
-
         <activity android:name=".UserProfile" />
-
-
         <activity android:name=".Calendar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -63,14 +54,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
         <activity android:name=".Register" />
-
-
         <activity android:name=".Login" />
-
-
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
