--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,8 @@
         </intent-filter>
         </activity>
 
-        <activity android:name=".ChatList" />
+        <activity android:name=".ChatList"
+            android:exported="true"/>
 
         <activity android:name=".Chat" />
 
