--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,7 @@
         </activity>
 
 
-        <activity android:name=".AddTask" />
+        <activity android:name=".AddTask" android:exported="true"/>
 
         <activity android:name=".UserProfile" />
 
