--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -78,14 +78,7 @@
         <activity android:name=".UserProfile" />
 
 
-        <activity android:name=".Calendar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-
+        <activity android:name=".Calendar" android:exported="true"/>
 
         <activity
             android:name=".Register"
