--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,21 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.IOapp">
-
+        <activity android:name=".UsersList"/>
+        <activity android:name=".AddGroupLeader" />
         <activity
-            android:name=".AddGroupLeader"
-            android:exported="true">
-            </activity>
-
-
-        <activity android:name=".AddGroupUserList"
-            android:exported="true">
+            android:name=".AddGroupUserList">
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
         <activity
             android:name=".AddGroup"
             android:exported="true">
@@ -31,73 +24,48 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
         <activity
-            android:name=".SeekWindow"
-            android:exported="true">
+            android:name=".SeekWindow">
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
         <activity android:name=".GroupTasks" />
-
         <activity android:name=".GroupUserList" />
-
         <activity
-            android:name=".GroupList"
-            android:exported="true">
+            android:name=".GroupList">
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".ChatList"
+        <activity
+            android:name=".ChatList"
             android:exported="true"/>
-
-
         <activity android:name=".Chat" />
-
-
         <activity
-            android:name=".HomeWindow"
-            android:exported="true">
+            android:name=".HomeWindow">
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
-        <activity android:name=".AddTask" android:exported="true"/>
-
-
-        <activity android:name=".UserProfile">
-        </activity>
-
-
-
-        <activity android:name=".Calendar" android:exported="true"/>
-
         <activity
-            android:name=".Register"
-            android:exported="true">
+            android:name=".AddTask"/>
+        <activity android:name=".UserProfile"></activity>
+        <activity
+            android:name=".Calendar"/>
+        <activity
+            android:name=".Register">
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
-        <activity android:name=".Login" >
+        <activity android:name=".Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
